@@ -170,6 +170,9 @@ Release 2.4.0 - UNRELEASED
     HADOOP-10301. AuthenticationFilter should return Forbidden for failed
     authentication. (Daryn Sharp via jing9)
 
+    HADOOP-9525. Add tests that validate winutils chmod behavior on folders
+    (ivanmi)
+
   BREAKDOWN OF HADOOP-10184 SUBTASKS AND RELATED JIRAS
 
     HADOOP-10185. FileSystem API for ACLs. (cnauroth)
